Fix horizontal scrolling

--- a/cybersec-portal/src/components/Navbar/index.scss
+++ b/cybersec-portal/src/components/Navbar/index.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     height: 10vh;
-    width: 100vw;
+    width: 100%;
     background-color: #1B1D27;
     justify-content: center;
     align-items: center;
